[package]
name = "telkom-domain-docs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"
yew-router = "0.16"

router = { path = "./src/router" }
navbar = { path = "./src/components/navbar" }


[workspace]

members = [
    "src/router",
    "src/components/navbar"
]