[package]
name = "telkom-domain-docs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"
yew-router = "0.16"
wasm-logger = "0.2.0"
log = "0.4.6"

route = { path = "./src/router/route" }
switch = { path = "./src/router/switch" }
navtop = { path = "./src/components/navtop" }
footer = { path = "./src/components/footer" }


[workspace]

members = [
    "src/router/route",
    "src/router/switch",
    "src/components/navtop",
    "src/components/logo",
    "src/components/logo-icon",
    "src/pages/home",
    "src/components/footer",

    "src/pages/articles/articles-home",
    "src/pages/articles/sidebar-main-menu",
    "src/pages/articles/sidebar-articles",
    "src/pages/articles/articles-breadcrumb",


    "src/pages/articles/get-started/get-started-main",
    "src/pages/articles/get-started/get-started-content",
    "src/pages/articles/get-started/get-started-home",
    "src/pages/articles/get-started/sidebar-get-started",


    "src/pages/articles/get-started/identity-fundamentals/identity-fundamentals-home",
    "src/pages/articles/get-started/identity-fundamentals/introduction-to-iam",
]