[package]
name = "telkom-domain-docs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.19"
yew-router = "0.16"
wasm-logger = "0.2.0"
log = "0.4.6"

route = { path = "./src/router/route" }
switch = { path = "./src/router/switch" }
navtop = { path = "./src/components/navtop" }
footer = { path = "./src/components/footer" }


[workspace]

members = [
    "src/router/route",
    "src/router/switch",
    "src/components/navtop",
    "src/components/logo",
    "src/components/logo-icon",
    "src/components/footer",
    "src/components/alert",
    "src/pages/home",

    "src/pages/articles/articles-home",
    "src/pages/articles/sidebar-main-menu",
    "src/pages/articles/sidebar-articles",
    "src/pages/articles/articles-breadcrumb",


    "src/pages/articles/get-started/get-started-main",
    "src/pages/articles/get-started/get-started-content",
    "src/pages/articles/get-started/get-started-home",
    "src/pages/articles/get-started/sidebar-get-started",
    "src/pages/articles/get-started/get-started-topics",

    "src/pages/articles/get-started/identity-fundamentals/identity-fundamentals-home",
    "src/pages/articles/get-started/identity-fundamentals/introduction-to-iam",
    "src/pages/articles/get-started/identity-fundamentals/introduction-to-domain",
    "src/pages/articles/get-started/identity-fundamentals/authentication-vs-authorization",


    "src/pages/articles/get-started/telkom-domain-overview/telkom-domain-overview-home",

    "src/pages/articles/get-started/telkom-domain-overview/telkom-domain-dashboard/telkom-domain-dashboard-home",
    "src/pages/articles/get-started/telkom-domain-overview/telkom-domain-dashboard/activity-about",
    
    "src/pages/articles/get-started/telkom-domain-overview/create-tenants/create-tenants-home",
    "src/pages/articles/get-started/telkom-domain-overview/create-tenants/create-multiple-tenants",
    "src/pages/articles/get-started/telkom-domain-overview/create-tenants/multiple-tenants-to-single-subscription",
    "src/pages/articles/get-started/telkom-domain-overview/create-tenants/set-up-multiple-environments",
    "src/pages/articles/get-started/telkom-domain-overview/create-tenants/multi-tenant-apps-best-practices",

    "src/pages/articles/get-started/telkom-domain-overview/register-apis",

    "src/pages/articles/get-started/tenant-settings/tenant-settings-home",
    "src/pages/articles/get-started/tenant-settings/signing-keys/signing-keys-home",
    "src/pages/articles/get-started/tenant-settings/signing-keys/rotate-signing-keys",
    "src/pages/articles/get-started/tenant-settings/signing-keys/revoke-signing-keys",
    "src/pages/articles/get-started/tenant-settings/signing-keys/view-signing-certificates",

    "src/pages/articles/get-started/applications-in-domain/applications-in-domain-home",
    "src/pages/articles/get-started/applications-in-domain/application-settings",
    "src/pages/articles/get-started/applications-in-domain/remove-applications",

]