[package]
name = "articles-breadcrumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
log = "0.4.6"
get-started-topics = { path = "../get-started/get-started-topics" }
route = { path = "../../../router/route" }
