[package]
name = "sidebar-articles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
sidebar-main-menu = { path = "../sidebar-main-menu" }
route = { path = "../../../router/route" }
logo-icon = { path = "../../../components/logo-icon" }