[package]
name = "get-started-content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.6"
get-started-topics = { path = "../get-started-topics" }
get-started-home = { path = "../get-started-home" }
identity-fundamentals-home = { path = "../identity-fundamentals/identity-fundamentals-home" }
introduction-to-iam = { path = "../identity-fundamentals/introduction-to-iam" }
authentication-vs-authorization = { path = "../identity-fundamentals/authentication-vs-authorization" }

telkom-domain-overview-home = { path = "../telkom-domain-overview/telkom-domain-overview-home" }
telkom-domain-dashboard-home = { path = "../telkom-domain-overview/telkom-domain-dashboard/telkom-domain-dashboard-home" }
activity-about = { path = "../telkom-domain-overview/telkom-domain-dashboard/activity-about" }