[package]
name = "get-started-content"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.6"
get-started-topics = { path = "../get-started-topics" }
get-started-home = { path = "../get-started-home" }
identity-fundamentals-home = { path = "../identity-fundamentals/identity-fundamentals-home" }
introduction-to-iam = { path = "../identity-fundamentals/introduction-to-iam" }
introduction-to-domain = { path = "../identity-fundamentals/introduction-to-domain" }
authentication-vs-authorization = { path = "../identity-fundamentals/authentication-vs-authorization" }

telkom-domain-overview-home = { path = "../telkom-domain-overview/telkom-domain-overview-home" }
telkom-domain-dashboard-home = { path = "../telkom-domain-overview/telkom-domain-dashboard/telkom-domain-dashboard-home" }
activity-about = { path = "../telkom-domain-overview/telkom-domain-dashboard/activity-about" }
create-tenants-home = { path = "../telkom-domain-overview/create-tenants/create-tenants-home" }
create-multiple-tenants = { path = "../telkom-domain-overview/create-tenants/create-multiple-tenants" }
multiple-tenants-to-single-subscription = { path = "../telkom-domain-overview/create-tenants/multiple-tenants-to-single-subscription" }
set-up-multiple-environments = { path = "../telkom-domain-overview/create-tenants/set-up-multiple-environments" }
multi-tenant-apps-best-practices = { path = "../telkom-domain-overview/create-tenants/multi-tenant-apps-best-practices" }
register-apis = { path = "../telkom-domain-overview/register-apis" }

tenant-settings-home = { path = "../tenant-settings/tenant-settings-home" }
signing-keys-home = { path = "../tenant-settings/signing-keys/signing-keys-home" }
rotate-signing-keys= { path = "../tenant-settings/signing-keys/rotate-signing-keys" }
revoke-signing-keys= { path = "../tenant-settings/signing-keys/revoke-signing-keys" }