[package]
name = "get-started-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.6"
get-started-topics = { path = "../get-started-topics" }
sidebar-get-started = { path = "../sidebar-get-started" }
get-started-content = { path = "../get-started-content" }
articles-breadcrumb = { path = "../../articles-breadcrumb" }